--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: "Jekyll Resume Template"
-description: "A resume template for Jekyll and GitHub Pages sites."
+title: "Vote VOLT"
+description: "SPOCRA Proposal"
 
 # Build settings
 markdown: kramdown
@@ -10,49 +10,49 @@ sass:
 
 # Resume settings
 resume_avatar:                  "true"
-resume_name:                    "Lisa M. Simpson"
-resume_title:                   "VP of Global Communications"
+resume_name:                    "Vote VOLT"
+resume_title:                   "SPOCRA Board Member Proposal"
 
 # used for the contact button in _layouts/resume.html
-resume_contact_email:           "lisasimpson@youremailaddress.com"
+resume_contact_email:           "info@voltairera.com"
 
 # the next two items are used for schema itemprops in _layouts/resume.html
-resume_contact_telephone:       "555-7334"
-resume_contact_address:         "742 Evergreen Terrace, Springfield"
+#resume_contact_telephone:       "555-5555"
+#resume_contact_address:         "742 Evergreen Terrace, Springfield"
 
-resume_header_contact_info:     "742 Evergreen Terrace, Springfield • 555-7334 • lisasimpson@youremailaddress.com"
+#resume_header_contact_info:     "742 Evergreen Terrace, Springfield • 555-7334 • lisasimpson@youremailaddress.com"
 display_header_contact_info:    "false"
 
-resume_header_intro: "<p>This is the executive summary. You should write a few brief, concise, and meaningful sentences about yourself from a professional context, and your immediate career goals. Make the length appropriate for your needs, but keep it brief and concise</p>"
+resume_header_intro: "<p>I have been with Cardano since September 2017 silently in the background and actively engaging on the Cardano Forums and Reddit. But what makes me a prime candidate for SPOCRA? A SPOs job is to ensure we provide a robust ecosystem for the future of Cardano. While some SPOs want to run their pools and reap the rewards, the primary objective of the pool is to maintain a secure and robust network. That takes a deep understanding of Cardano, commitment, and time. From reading Cardano whitepapers too answering forum and reddit questions to educate and support the Cardano Ecosystem for the past 3 years, I have an understanding. I am more committed then I have ever been in supporting and growing the Cardano ecosystem even if my Pool does not. I will always be part of the SPO community for years to come. I am fortunate enough to work fully remote and in a position, where I can spend a few hours a day supporting the community where needed. While many out their don’t know me I tend to be in the background reading and understanding how the community feels as a whole and not as an individual. But who am I? I am a Cloud Security Engineer with over 7 years in Securing, breaking, and defending networks and applications. I have been in computers since the days they used floppy discs in our computer lab. If I was voted on the board, I would ensure every voice is heard and all SOCRA’s decisions are recorded and transparent.</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
 # or remove the resume_looking_for_work option entirely
 # to leave blank
-resume_looking_for_work:        "yes"
+#resume_looking_for_work:        "no"
 
 # Decide which sections to use
 # comment out to hide
-resume_section_experience:      true
-resume_section_education:       true
-resume_section_projects:        true
-resume_section_skills:          true
-resume_section_recognition:     true
-resume_section_links:           true
-resume_section_associations:    true
+#resume_section_SPO:      true
+#resume_section_education:       true
+#resume_section_projects:        true
+#resume_section_skills:          true
+#resume_section_recognition:     true
+#resume_section_links:           true
+#esume_section_associations:    true
 # resume_section_interests:       true
 
 # Resume social links
 # uncomment the options you wish to display, and add your own URL
 resume_social_links:
-  resume_github_url:            "https://github.com/jglovier/resume-template"
-  resume_twitter_url:           "http://twitter.com/jglovier"
-  resume_dribbble_url:          "https://dribbble.com/jag"
+  resume_github_url:            "https://github.com/Voltairera"
+  resume_twitter_url:           "https://twitter.com/Volt_Pool"
+  #resume_dribbble_url:          "https://dribbble.com/jag"
   # resume_facebook_url:          "insert Facebook URL here"
-  resume_linkedin_url:          "https://www.linkedin.com/in/joelglovier"
+  resume_linkedin_url:          "https://www.linkedin.com/company/voltairera/"
   # resume_instagram_url:         "insert your Instagram URL here"
-  resume_website_url:           "http://joelglovier.com"
-  resume_medium_url:            "https://medium.com/@jglovier"
+  resume_website_url:           "https://voltaiera.com.com"
+  #resume_medium_url:            "https://medium.com/@jglovier"
 resume_print_social_links:      true
 
 # Design settings
